package com.softserve.edu07.hw.task02;

interface Vehicle {
}
